--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,6 @@
 body {
     background-color: black;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
-
+    font-family: 'Roboto', sans-serif;
 }
 
 .post {
@@ -12,9 +11,8 @@ body {
 }
 
 .encabezado {
-    height: 50px;
-    width: 400px;
-    background-color: white;
+    height: 60px;
+    width: 400px;   
     align-items: center;
     display: flex;
        
@@ -22,21 +20,23 @@ body {
 .logo {
     height: 50px;
     width: 50px;
+    font-size: 35px;
     padding-left: 10px;
-    padding-top: 20px;
+    padding-top: 10px;
 }
 .text {
     height: 50px;
     width: 400px;
     justify-content: space-between;
     font-size: small;
-    padding-top: 0%;
+    padding-top: 3px;
     padding-bottom: 10px;
     
 }
 .menu {
     height: 50px;
     width: 30px;
+    font-size: 25px;
     padding-top: 20px;
     justify-content:right
     
@@ -53,10 +53,10 @@ body {
 .iconos  {
     height: 50px;
     width: 400px;
-    background-color: white;
+    font-size: 25px;
     align-items: center;
     display: flex;
-}
+    }
 .iconosizq {
     height: 50px;
     width: 340px;
